Added logo and side menu

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,9 @@ body {
 .navbar {
   margin-bottom: 30px;
 }
+.navbar-default{
+  margin-top: 10px;
+}
 
 /*****************************************************************************/
 /*
