--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,12 @@
-
+			</div>
     	</div>
     	<div id="footer">
       		<div class="container">
-        		<p class="text-muted credit">Example courtesy <a href="http://martinbean.co.uk">Martin Bean</a> and <a href="http://ryanfait.com/sticky-footer/">Ryan Fait</a>.</p>
+        		<p class="text-muted credit">
+
+        			Checkout BEAR.Sunday on <a href="https://github.com/koriym/BEAR.Sunday">Github</a>.
+
+        		</p>
       		</div>
     	</div>
     </body>
