--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,23 +11,22 @@
 
     </head>
     <body>
-    <div class="container">
+    <div id="wrap">
+      <div class="container">
+        <img src="/img/logo.png" />
 
-      <!-- Static navbar -->
-      <div class="navbar navbar-default">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/">BEAR.Sunday</a>
+        <!-- Static navbar -->
+        <div class="navbar navbar-default">
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li><a href="#">Documentation</a></li>
+              <li><a href="#">Code</a></li>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="/ja">Japanese</a></li>
+              <li><a href="/">English</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
         </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Documentation</a></li>
-            <li><a href="#">Code</a></li>
-            </li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="/ja">Japanese</a></li>
-            <li><a href="/">English</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
 
