--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,20 @@
 {% include header.html %}
 
-  {{ content }}
+
+<div class="row">
+	<div class="col-md-3">
+
+		<ul class="nav nav-pills nav-stacked">
+  			<li><a href="#">Home</a></li>
+  			<li><a href="#">Profile</a></li>
+  			<li><a href="#">Messages</a></li>
+		</ul>
+	</div>
+	<div class="col-md-9">
+
+		 {{ content }}
+	</div>
+</div>
+ 
 
 {% include footer.html %}
