Added site url for css additions

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,13 +7,13 @@
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="{{ site.url }}/css/main.css">
 
     </head>
     <body>
     <div id="wrap">
       <div class="container">
-        <img src="/img/logo.png" />
+        <img src="{{ site.url }}/img/logo.png" />
 
         <!-- Static navbar -->
         <div class="navbar navbar-default">
