Adding more pages to japanese documentation

--- a/_includes/docs/ja/subnav.html
+++ b/_includes/docs/ja/subnav.html
@@ -9,6 +9,18 @@
 		{% if page.category == "インストールと設定" %}
    			{% include docs/ja/install.html %}
 		{% endif %}
+
+		{% if page.category == "「はじめての」チュートリアル" %}
+			{% include docs/ja/my_first.html %}
+		{% endif %}
+
+		{% if page.category == "アプリケーション" %}
+			{% include docs/ja/application.html %}
+		{% endif %}
+
+		{% if page.category == "リソース" %}
+			{% include docs/ja/resource.html %}
+		{% endif %}
 	</ul>
 </div>
 </div>
