Added Japanese menu

--- a/_includes/docs/ja/subnav.html
+++ b/_includes/docs/ja/subnav.html
@@ -21,6 +21,17 @@
 		{% if page.category == "リソース" %}
 			{% include docs/ja/resource.html %}
 		{% endif %}
+
+
+		{% if page.category == "DI＆AOP" %}
+			{% include docs/ja/di_aop.html %}
+		{% endif %}
+
+		{% if page.category == "その他" %}
+			{% include docs/ja/libraries.html %}
+		{% endif %}
+
+		
 	</ul>
 </div>
 </div>
