--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,27 +1,28 @@
 {% include header.html %}
 
+<div class="container">
+
+	        <!-- Static navbar -->
+        <div class="navbar navbar-default">
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li><a href="#">Documentation</a></li>
+              <li><a href="#">Code</a></li>
+              </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="/ja">Japanese</a></li>
+              <li><a href="/">English</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
 
 <div class="row">
-	<div class="col-md-3">
-
-		
-
-		<div class="panel panel-default">
-  			<div class="panel-heading"><strong>{{ page.category }}</strong></div>
-  			<div class="panel-body">
-
-				<ul class="nav nav-pills nav-stacked">
-		  			<li><a href="#">Home</a></li>
-		  			<li><a href="#">Profile</a></li>
-		  			<li><a href="#">A really long long long linklong long long link</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
-	<div class="col-md-9">
+	<div class="col-md-12">
 
 		 {{ content }}
 	</div>
+</div>
+
 </div>
  
 
