--- a/_layouts/index_ja.html
+++ b/_layouts/index_ja.html
@@ -6,7 +6,7 @@
 <div class="navbar navbar-default">
   <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav">
-      <li><a href="/documentation/ja/introduction.html">ドキュメンテーション</a></li>
+      <li><a href="../documentation/ja/introduction.html">ドキュメンテーション</a></li>
       <li><a href="https://github.com/koriym/BEAR.Sunday">コード</a></li>
       </li>
     </ul>
